<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.login.setup.SetupProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/logoCardView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="55dp"
        app:cardElevation="6dp">

        <ImageView
            android:id="@+id/imgViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imgViewAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_photo" />

        <ProgressBar
            android:id="@+id/prBarImgLoading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/uploadUserPhoto"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/logoCardView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/uploadProfilePhoto"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/textViewUserNameHint"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-5.9dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/back_phone_edit"
        android:gravity="center_vertical"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:maxLength="28"
        android:paddingStart="12dp"
        android:paddingEnd="12sp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewUserNameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadUserPhoto"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorWhite"
        android:text="@string/fullname"
        android:textColor="@color/textColorGrayish"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/back_button_blue"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>