<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.login.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/iagreeText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/logoCardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="16sp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo1" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/logoCardView"
                android:layout_marginStart="24dp"
                android:layout_marginTop="73dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/back_phone_edit"
                android:gravity="center_vertical"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:paddingStart="114dp"
                android:paddingEnd="62dp"
                android:textColor="@color/textColorMain"
                android:textSize="16sp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccpLogin"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_below="@+id/logoCardView"
                android:layout_marginStart="32dp"
                android:layout_marginTop="73dp"
                android:gravity="center"
                android:textColor="@color/textColorMain"
                android:textSize="16sp"
                app:ccpDialog_textColor="@color/textColorMain"
                app:ccp_contentColor="@color/textColorMain"
                app:ccp_defaultPhoneCode="996"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/ccpLogin"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/back_button_blue"
                android:gravity="center"
                android:text="@string/loginorauth"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/iagreeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/iagreetext"
        android:textColor="@color/textColorGrayish"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>